@startuml
skinparam backgroundColor white
skinparam classBackgroundColor #F8F9FA
skinparam classBorderColor #6C757D
skinparam arrowColor #495057
skinparam defaultFontName Arial
skinparam defaultFontSize 11
hide methods

class CollaborationNote {
  id: Integer <<PK>>
  document_id: Integer <<FK>>
  section_id: Integer <<FK>>
  user_id: Integer <<FK>>
  content: Text
}

class DocumentShare {
  id: Integer <<PK>>
  document_id: Integer <<FK>>
  user_id: Integer <<FK>>
  permission: Enum(DocumentSharePermission)
  created_by: Integer <<FK>>
  revoked_at: DateTime
}

class ActivityEvent {
  id: Integer <<PK>>
  project_id: Integer <<FK>>
  event_type: String
  analysis_id: Integer <<FK>>
  document_id: Integer <<FK>>
  section_id: Integer <<FK>>
}

class ChatThread {
  id: Integer <<PK>>
  project_id: Integer <<FK>>
  title: String
}

class ChatMessage {
  id: Integer <<PK>>
  thread_id: Integer <<FK>>
  role: Enum(MessageRole)
  content: Text
}

class Document
class Section
class User
class Project
class Analysis
class GenerationRun

Document "1" -- "0..*" CollaborationNote : notes
Section "0..1" -- "0..*" CollaborationNote : section notes
User "1" -- "0..*" CollaborationNote : author
Document "1" -- "0..*" DocumentShare : shares
User "1" -- "0..*" DocumentShare : shared user
User "1" -- "0..*" DocumentShare : creator
Project "1" -- "0..*" ActivityEvent : activity
Analysis "0..1" -- "0..*" ActivityEvent : analysis events
Document "0..1" -- "0..*" ActivityEvent : document events
Section "0..1" -- "0..*" ActivityEvent : section events
GenerationRun "0..1" -- "0..*" ActivityEvent : generation events
Project "1" *-- "0..*" ChatThread : chat_threads
ChatThread "1" *-- "0..*" ChatMessage : messages

note right of CollaborationNote
Liveblocks handles real-time presence, cursors,
CRDT sync, and inline comment threads externally.
Pagemark persists Section.content_md snapshots.
end note
@enduml
